welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: '(' expected but identifier found.
for i <- 2 to 6  {
    ^Array1:23: error: illegal start of simple expression
}
^